--- a/account/templates/register.html
+++ b/account/templates/register.html
@@ -4,7 +4,7 @@
 
 
 
-<div class="h-screen flex flex-col justify-center items-center">
+<div class="pt-5 flex flex-col justify-center items-center">
     <div class="container mx-auto ">
         <div class="flex flex-col lg:flex-row w-10/12 lg:w-8/12 bg-white rounded-xl mx-auto shadow-lg overflow-hidden">
             <div class="w-full lg:w-1/2 flex flex-col items-center justify-center p-12 bg-no-repeat bg-cover bg-center" id="modal-id">
