--- a/faculty/templates/student-by-semester.html
+++ b/faculty/templates/student-by-semester.html
@@ -30,17 +30,66 @@
   </tbody>
 </table> -->
 
+<script src="https://unpkg.com/@themesberg/flowbite@latest/dist/flowbite.bundle.js"></script>
+
 <div>
     <div class=" h-auto w-full flex items-center justify-center pt-5 mb-20 lg:mb-0">
         <div class="bg-gray-50 h-auto lg:p-6 p-4 flex justify-center items-center w-full max-w-[95%] lg:max-w-[1200px] shadow-lg">
             <div class="flex-col flex md:flex-row py-10 lg:py-0 mx-5 gap-6 md:mx-0 md:gap-0 md:justify-evenly w-full">
-                <div class="flex items-center gap-4">
-                    <h1 class="max-w-[100px] text-[20px]font-bold text-xl hover:text-teal-500 cursor-pointer">Semesters</h1>
+                <div class="relative inline-flex flex-col" >
+                    <div class="inline-flex items-center gap-4">
+                        <button class="max-w-[150px] text-[20px]font-bold text-xl hover:text-teal-500 cursor-pointer inline-flex" data-dropdown-toggle="dropdown" >Semesters<svg class="w-4 h-7 ml-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path></svg></button>
+                    </div>
+                    <div class=" static left-0 bg-gray-50 z-10 top-full rounded-md p-4 hidden" id="dropdown">
+                        <ul class="" aria-labelledby="dropdown">
+                            <li>
+                                <a href="#" class="block px-4 py-2 flex p-2 rounded-md hover:text-teal-500 hover:bg-gray-100 whitespace-nowrap">Semester 1</a>
+                            </li>
+                            <li>
+                                <a href="#" class="block px-4 py-2 flex p-2 rounded-md hover:text-teal-500 hover:bg-gray-100
+                                 whitespace-nowrap">Semester 2</a>
+                            </li>
+                            <li>
+                                <a href="#" class="block px-4 py-2 flex p-2 rounded-md hover:text-teal-500 hover:bg-gray-100
+                                 whitespace-nowrap">Semester 3</a>
+                            </li>
+                            <li>
+                                <a href="#" class="block px-4 py-2 flex p-2 rounded-md hover:text-teal-500 hover:bg-gray-100
+                                 whitespace-nowrap">Semester 4</a>
+                            </li>
+                            <li>
+                                <a href="#" class="block px-4 py-2 flex p-2 rounded-md hover:text-teal-500 hover:bg-gray-100
+                                 whitespace-nowrap">Semester 5</a>
+                            </li>
+                            <li>
+                                <a href="#" class="block px-4 py-2 flex p-2 rounded-md hover:text-teal-500 hover:bg-gray-100
+                                 whitespace-nowrap">Semester 6</a>
+                            </li>
+                            <li>
+                                <a href="#" class="block px-4 py-2 flex p-2 rounded-md hover:text-teal-500 hover:bg-gray-100
+                                 whitespace-nowrap">Semester 7</a>
+                            </li>
+                            <li>
+                                <a href="#" class="block px-4 py-2 flex p-2 rounded-md hover:text-teal-500 hover:bg-gray-100
+                                 whitespace-nowrap">Semester 8</a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
-                <div class="flex items-center gap-4">
+                <div class="relative inline-flex flex-col" >
+                    <div class="inline-flex items-center gap-4">
+                        <button class="max-w-[150px] text-[20px]font-bold text-xl hover:text-teal-500 cursor-pointer inline-flex" data-dropdown-toggle="dropdoown" >Subjects<svg class="w-4 h-7 ml-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path></svg></button>
+                    </div>
+                    <div class=" static left-0 bg-gray-50 z-10 top-full rounded-md p-4 hidden" id="dropdoown">
+                        <ul class="" aria-labelledby="dropdown">
+                            <li>
+                                <a href="#" class="block px-4 py-2 flex p-2 rounded-md hover:text-teal-500 hover:bg-gray-100 whitespace-nowrap"></a>
+                            </li>
+                            
+                        </ul>
+                    </div>
+                </div>
 
-                    <h1 class="max-w-[150px] text-[20px]font-bold text-xl hover:text-teal-500 cursor-pointer">Subjects</h1>
-                </div>
                 <div class="flex items-center gap-4">
                     <button hx-get="/add_account/{{faculty}}/{{semester}}" hx-target="body" class="max-w-[150px] text-[20px]font-bold text-xl hover:text-teal-500">Add account</button>
                 </div>
@@ -93,4 +142,4 @@
 
 <br>
 <br>
-<button hx-get="/faculty/add_subject/{{faculty}}/{{semester}}" hx-target="body"> Add subject </button>
+{% comment %} <button hx-get="/faculty/add_subject/{{faculty}}/{{semester}}" hx-target="body"> Add subject </button> {% endcomment %}
