added dropdown menu in studentbysem

--- a/faculty/templates/student-by-semester.html
+++ b/faculty/templates/student-by-semester.html
@@ -81,7 +81,7 @@
                         <button class="max-w-[150px] text-[20px]font-bold text-xl hover:text-teal-500 cursor-pointer inline-flex" data-dropdown-toggle="dropdoown" >Subjects<svg class="w-4 h-7 ml-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path></svg></button>
                     </div>
                     <div class=" static left-0 bg-gray-50 z-10 top-full rounded-md p-4 hidden" id="dropdoown">
-                        <ul class="" aria-labelledby="dropdown">
+                        <ul class="" aria-labelledby="dropdoown">
                             <li>
                                 <a href="#" class="block px-4 py-2 flex p-2 rounded-md hover:text-teal-500 hover:bg-gray-100 whitespace-nowrap"></a>
                             </li>
