--- a/faculty/templates/student-by-semester.html
+++ b/faculty/templates/student-by-semester.html
@@ -142,4 +142,4 @@
 
 <br>
 <br>
-{% comment %} <button hx-get="/faculty/add_subject/{{faculty}}/{{semester}}" hx-target="body"> Add subject </button> {% endcomment %}
+{% comment %} <button hx-get="/faculty/add_subjecttt/{{faculty}}/{{semester}}" hx-target="body"> Add subject </button> {% endcomment %}
