--- a/faculty/templates/student-by-semester.html
+++ b/faculty/templates/student-by-semester.html
@@ -36,56 +36,33 @@
     <div class=" h-auto w-full flex items-center justify-center pt-5 mb-20 lg:mb-0">
         <div class="bg-gray-50 h-auto lg:p-6 p-4 flex justify-center items-center w-full max-w-[95%] lg:max-w-[1200px] shadow-lg">
             <div class="flex-col flex md:flex-row py-10 lg:py-0 mx-5 gap-6 md:mx-0 md:gap-0 md:justify-evenly w-full">
-                <div class="relative inline-flex flex-col" >
+                <div class="relative inline-flex flex-col">
                     <div class="inline-flex items-center gap-4">
-                        <button class="max-w-[150px] text-[20px]font-bold text-xl hover:text-teal-500 cursor-pointer inline-flex" data-dropdown-toggle="dropdown" >Semesters<svg class="w-4 h-7 ml-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path></svg></button>
+                        <button class="max-w-[150px] text-[20px]font-bold text-xl hover:text-teal-500 cursor-pointer inline-flex" data-dropdown-toggle="dropdown">Semesters<svg class="w-4 h-7 ml-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path></svg></button>
                     </div>
                     <div class=" static left-0 bg-gray-50 z-10 top-full rounded-md p-4 hidden" id="dropdown">
                         <ul class="" aria-labelledby="dropdown">
+                            {% for i in semesters %}
                             <li>
-                                <a href="#" class="block px-4 py-2 flex p-2 rounded-md hover:text-teal-500 hover:bg-gray-100 whitespace-nowrap">Semester 1</a>
+                                <a href="{% url 'students-by-semester' faculty i %}" class=" px-4 py-2 flex p-2 rounded-md hover:text-teal-500 hover:bg-gray-100 whitespace-nowrap">Semester {{i}}</a>
                             </li>
-                            <li>
-                                <a href="#" class="block px-4 py-2 flex p-2 rounded-md hover:text-teal-500 hover:bg-gray-100
-                                 whitespace-nowrap">Semester 2</a>
-                            </li>
-                            <li>
-                                <a href="#" class="block px-4 py-2 flex p-2 rounded-md hover:text-teal-500 hover:bg-gray-100
-                                 whitespace-nowrap">Semester 3</a>
-                            </li>
-                            <li>
-                                <a href="#" class="block px-4 py-2 flex p-2 rounded-md hover:text-teal-500 hover:bg-gray-100
-                                 whitespace-nowrap">Semester 4</a>
-                            </li>
-                            <li>
-                                <a href="#" class="block px-4 py-2 flex p-2 rounded-md hover:text-teal-500 hover:bg-gray-100
-                                 whitespace-nowrap">Semester 5</a>
-                            </li>
-                            <li>
-                                <a href="#" class="block px-4 py-2 flex p-2 rounded-md hover:text-teal-500 hover:bg-gray-100
-                                 whitespace-nowrap">Semester 6</a>
-                            </li>
-                            <li>
-                                <a href="#" class="block px-4 py-2 flex p-2 rounded-md hover:text-teal-500 hover:bg-gray-100
-                                 whitespace-nowrap">Semester 7</a>
-                            </li>
-                            <li>
-                                <a href="#" class="block px-4 py-2 flex p-2 rounded-md hover:text-teal-500 hover:bg-gray-100
-                                 whitespace-nowrap">Semester 8</a>
-                            </li>
+                            {% endfor %}
+
                         </ul>
                     </div>
                 </div>
-                <div class="relative inline-flex flex-col" >
+                <div class="relative inline-flex flex-col">
                     <div class="inline-flex items-center gap-4">
-                        <button class="max-w-[150px] text-[20px]font-bold text-xl hover:text-teal-500 cursor-pointer inline-flex" data-dropdown-toggle="dropdoown" >Subjects<svg class="w-4 h-7 ml-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path></svg></button>
+                        <button class="max-w-[150px] text-[20px]font-bold text-xl hover:text-teal-500 cursor-pointer inline-flex" data-dropdown-toggle="dropdoown">Subjects<svg class="w-4 h-7 ml-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path></svg></button>
                     </div>
                     <div class=" static left-0 bg-gray-50 z-10 top-full rounded-md p-4 hidden" id="dropdoown">
                         <ul class="" aria-labelledby="dropdoown">
+                            {% for subject in subjects %}
                             <li>
-                                <a href="#" class="block px-4 py-2 flex p-2 rounded-md hover:text-teal-500 hover:bg-gray-100 whitespace-nowrap"></a>
+                                <a href="{% url 'subject-detail' subject %}" class=" px-4 py-2 flex p-2 rounded-md hover:text-teal-500 hover:bg-gray-100 whitespace-nowrap">{{subject}}</a>
                             </li>
-                            
+                            {% endfor %}
+
                         </ul>
                     </div>
                 </div>
@@ -132,14 +109,3 @@
         </div>
     </div>
 </div>
-{% for subject in subjects %}
-
-<a href="{% url 'subject-detail' subject %}">
-
-{{subject}}
-
-</a> {% endfor %}
-
-<br>
-<br>
-{% comment %} <button hx-get="/faculty/add_subjecttt/{{faculty}}/{{semester}}" hx-target="body"> Add subject </button> {% endcomment %}
