--- a/faculty/templates/student-by-semester.html
+++ b/faculty/templates/student-by-semester.html
@@ -77,6 +77,9 @@
         </div>
     </div>
     <div>
+        <div class="text-center text-lg font-bold mt-4">
+            Semester {{semester}}
+        </div>
         <div class="flex justify-center pt-5">
             <div class="w-full lg:w-3/4 xl:w-2/3">
                 <table class="table-auto border border-gray-300 mx-auto">
