--- a/faculty/templates/subject_detail.html
+++ b/faculty/templates/subject_detail.html
@@ -4,7 +4,8 @@
 
 
 
-<p>Taught in : {{subject.faculty}} {{subject.semester}} <sup>th</sup> Semester
+<p>
+    Taught in : {{subject.faculty}} {{subject.semester}} <sup>th</sup> Semester Credit hours: 4
     <br>{{subject.notice}}
 
     <br> {% if group == "admin" %}
