--- a/faculty/templates/student-by-semester.html
+++ b/faculty/templates/student-by-semester.html
@@ -1,36 +1,7 @@
-{% include 'navbar.html' %}
+ {% include 'navbar.html' %}
 
 
-<!-- <button hx-get="/add_account/{{faculty}}/{{semester}}" hx-target="body" class="rounded-md bg-gray-100 px-5 py-2.5 text-sm font-medium text-teal-600">Add account</button> -->
 
-<!-- <table class="table-auto">
-  <thead>
-    <tr>
-      <th>Username</th>
-      <th>First Name</th>
-      <th>Last Name</th>
-      <th>Email</th>
-      <th>Phone Number</th>
-      <th>Address</th>
-      <th>Faculty</th>
-    </tr>
-  </thead>
-  <tbody>
-    {% for student in students %}
-    <tr>
-      <td>{{student.username}}</td>
-      <td>{{student.first_name}}</td>
-      <td>{{student.last_name}}</td>
-        <td>{{student.email}}</td>
-        <td>{{student.phone_number}}</td>
-        <td>{{student.address}}</td>
-        <td>{{student.faculty}}</td>
-    </tr>
-    {% endfor %}
-  </tbody>
-</table> -->
-
-<script src="https://unpkg.com/@themesberg/flowbite@latest/dist/flowbite.bundle.js"></script>
 
 <div>
     <div class=" h-auto w-full flex items-center justify-center pt-5 mb-20 lg:mb-0">
@@ -80,7 +51,7 @@
         <div class="text-center text-lg font-bold mt-4">
             Semester {{semester}}
         </div>
-        <div class="flex justify-center pt-5">
+        <div id="table-div" class="flex justify-center pt-5">
             <div class="w-full lg:w-3/4 xl:w-2/3">
                 <table class="table-auto border border-gray-300 mx-auto">
                     <thead>
