--- a/faculty/templates/teacher_list.html
+++ b/faculty/templates/teacher_list.html
@@ -3,7 +3,7 @@
 {% comment %} <button hx-get="/add_account/teacher/0" hx-target="body" class="rounded-md bg-gray-100 px-5 py-2.5 text-sm font-medium text-teal-600">Add account</button> {% endcomment %}
 
 
-<div class="flex justify-center pt-5 mt-10">
+<div class="mx-auto max-w-screen-xl px-4 sm:px-6 lg:px-8 flex justify-center pt-5 mt-10">
     <div class="w-full lg:w-3/4 xl:w-2/3">
         <table class="table-auto border border-gray-300 mx-auto">
             <thead>
@@ -31,7 +31,7 @@
                 {% endfor %}
             </tbody>
         </table>
-        <div class="pt-3">
+        <div class="pt-3 items-center">
             <button hx-get="/add_account/teacher/0" hx-target="body" class="rounded bg-gray-100 p-2 text-teal-600 font-semibold hover:bg-teal-600 hover:text-white transition">Add account</button>
         </div>
     </div>
