--- a/faculty/templates/student-by-semester.html
+++ b/faculty/templates/student-by-semester.html
@@ -1,93 +1,156 @@
- {% include 'navbar.html' %}
-
-
-
+{% include 'navbar.html' %}
 
 <div>
-    <div class=" h-auto w-full flex items-center justify-center pt-5 mb-20 lg:mb-0">
-        <div class="bg-gray-50 h-auto lg:p-6 p-4 flex justify-center items-center w-full max-w-[95%] lg:max-w-[1200px] shadow-lg">
-            <div class="flex-col flex md:flex-row py-10 lg:py-0 mx-5 gap-6 md:mx-0 md:gap-0 md:justify-evenly w-full">
-                <div class="relative inline-flex flex-col">
-                    <div class="inline-flex items-center gap-4">
-                        <button class="max-w-[150px] text-[20px]font-bold text-xl hover:text-teal-500 cursor-pointer inline-flex" data-dropdown-toggle="dropdown">Semesters<svg class="w-4 h-7 ml-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path></svg></button>
-                    </div>
-                    <div class=" static left-0 bg-gray-50 z-10 top-full rounded-md p-4 hidden" id="dropdown">
-                        <ul class="" aria-labelledby="dropdown">
-                            {% for i in semesters %}
-                            <li>
-                                <a href="{% url 'students-by-semester' faculty i %}" class=" px-4 py-2 flex p-2 rounded-md hover:text-teal-500 hover:bg-gray-100 whitespace-nowrap">Semester {{i}}</a>
-                            </li>
-                            {% endfor %}
-
-                        </ul>
-                    </div>
-                </div>
-                <div class="relative inline-flex flex-col">
-                    <div class="inline-flex items-center gap-4">
-                        <button class="max-w-[150px] text-[20px]font-bold text-xl hover:text-teal-500 cursor-pointer inline-flex" data-dropdown-toggle="dropdoown">Subjects<svg class="w-4 h-7 ml-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path></svg></button>
-                    </div>
-                    <div class=" static left-0 bg-gray-50 z-10 top-full rounded-md p-4 hidden" id="dropdoown">
-                        <ul class="" aria-labelledby="dropdoown">
-                            {% for subject in subjects %}
-                            <li>
-                                <a href="{% url 'subject-detail' subject %}" class=" px-4 py-2 flex p-2 rounded-md hover:text-teal-500 hover:bg-gray-100 whitespace-nowrap">{{subject}}</a>
-                            </li>
-                            {% endfor %}
-
-                        </ul>
-                    </div>
-                </div>
-
-                <div class="flex items-center gap-4">
-                    <button hx-get="/add_account/{{faculty}}/{{semester}}" hx-target="body" class="max-w-[150px] text-[20px]font-bold text-xl hover:text-teal-500">Add account</button>
-                </div>
-                <div class="flex items-center gap-4">
-                    <button hx-get="/faculty/add_subject/{{faculty}}/{{semester}}" hx-target="body" class="max-w-[150px] text-[20px]font-bold text-xl hover:text-teal-500"> Add subject </button>
-                </div>
-            </div>
+  <div
+    class="h-auto w-full flex items-center justify-center pt-5 mb-20 lg:mb-0"
+  >
+    <div
+      class="bg-gray-50 h-auto lg:p-6 p-4 flex justify-center items-center w-full max-w-[95%] lg:max-w-[1200px] shadow-lg"
+    >
+      <div
+        class="flex-col flex md:flex-row py-10 lg:py-0 mx-5 gap-6 md:mx-0 md:gap-0 md:justify-evenly w-full"
+      >
+        <div class="relative inline-flex flex-col">
+          <div class="inline-flex items-center gap-4">
+            <button
+              class="max-w-[150px] text-[20px]font-bold text-xl hover:text-teal-500 cursor-pointer inline-flex"
+              data-dropdown-toggle="dropdown"
+            >
+              Semesters
+              <svg
+                class="w-4 h-7 ml-2"
+                fill="none"
+                stroke="currentColor"
+                viewBox="0 0 24 24"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M19 9l-7 7-7-7"
+                ></path>
+              </svg>
+            </button>
+          </div>
+          <div
+            class="static left-0 bg-gray-50 z-10 top-full rounded-md p-4 hidden"
+            id="dropdown"
+          >
+            <ul class="" aria-labelledby="dropdown">
+              {% for i in semesters %}
+              <li>
+                <a
+                  href="{% url 'students-by-semester' faculty i %}"
+                  class="px-4 py-2 flex p-2 rounded-md hover:text-teal-500 hover:bg-gray-100 whitespace-nowrap"
+                  >Semester {{i}}</a
+                >
+              </li>
+              {% endfor %}
+            </ul>
+          </div>
         </div>
+        <div class="relative inline-flex flex-col">
+          <div class="inline-flex items-center gap-4">
+            <button
+              class="max-w-[150px] text-[20px]font-bold text-xl hover:text-teal-500 cursor-pointer inline-flex"
+              data-dropdown-toggle="dropdoown"
+            >
+              Subjects<svg
+                class="w-4 h-7 ml-2"
+                fill="none"
+                stroke="currentColor"
+                viewBox="0 0 24 24"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M19 9l-7 7-7-7"
+                ></path>
+              </svg>
+            </button>
+          </div>
+          <div
+            class="static left-0 bg-gray-50 z-10 top-full rounded-md p-4 hidden"
+            id="dropdoown"
+          >
+            <ul class="" aria-labelledby="dropdoown">
+              {% for subject in subjects %}
+              <li>
+                <a
+                  href="{% url 'subject-detail' subject %}"
+                  class="px-4 py-2 flex p-2 rounded-md hover:text-teal-500 hover:bg-gray-100 whitespace-nowrap"
+                  >{{subject}}</a
+                >
+              </li>
+              {% endfor %}
+            </ul>
+          </div>
+        </div>
+
+        <div class="items-center gap-4">
+          <button
+            hx-get="/add_account/{{faculty}}/{{semester}}"
+            hx-target="body"
+            class="max-w-[150px] text-[20px]font-bold text-xl hover:text-teal-500"
+          >
+            Add account
+          </button>
+        </div>
+        <div class="items-center gap-4">
+          <button
+            hx-get="/faculty/add_subject/{{faculty}}/{{semester}}"
+            hx-target="body"
+            class="max-w-[150px] text-[20px]font-bold text-xl hover:text-teal-500"
+          >
+            Add subject
+          </button>
+        </div>
+      </div>
     </div>
-    <div>
-        <div class="text-center text-lg font-bold mt-4">
-            Semester {{semester}}
-        </div>
-        <div id="table-div" class="flex justify-center pt-5">
-            <div class="w-full lg:w-3/4 xl:w-2/3">
-                <table class="table-auto border border-gray-300 mx-auto">
-
-                    <thead>
-                        <tr class="bg-gray-100">
-                            <th class="px-8 py-2 border-r border-gray-400">Username</th>
-                            <th class="px-8 py-2 border-r border-gray-400">First Name</th>
-                            <th class="px-8 py-2 border-r border-gray-400">Last Name</th>
-                            <th class="px-8 py-2 border-r border-gray-400">Email</th>
-                            <th class="px-8 py-2 border-r border-gray-400">Phone Number</th>
-                            <th class="px-8 py-2 border-r border-gray-400">Address</th>
-                            <th class="px-8 py-2 border-r border-gray-400">Faculty</th>
-                            <th class="px-8 py-2 border-r border-gray-400">Action</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        {% for student in students %}
-                        <tr class="hover:bg-gray-50">
-                            <td class="border px-4 py-2">{{student.username}}</td>
-                            <td class="border px-4 py-2">{{student.first_name}}</td>
-                            <td class="border px-4 py-2">{{student.last_name}}</td>
-                            <td class="border px-4 py-2">{{student.email}}</td>
-                            <td class="border px-4 py-2">{{student.phone_number}}</td>
-                            <td class="border px-4 py-2">{{student.address}}</td>
-                            <td class="border px-4 py-2">{{student.faculty}}</td>
-                            <td>
-                                <!-- <button hx-post="/delete_account/{{student.username}}" hx-target="#table-div">Delete</button> -->
-                                <a href="{% url 'delete-account' student.username%}">
-                                    Delete
-                                </a>
-                            </td>
-                        </tr>
-                        {% endfor %}
-                    </tbody>
-                </table>
-            </div>
-        </div>
+  </div>
+  <div>
+    <div class="text-center text-lg font-bold mt-4">Semester {{semester}}</div>
+    <div id="table-div" class="flex justify-center pt-5">
+      <div class="w-full lg:w-3/4 xl:w-2/3">
+        <table class="table-auto border border-gray-300 mx-auto">
+          <thead>
+            <tr class="bg-gray-100">
+              <th class="px-8 py-2 border-r border-gray-400">Username</th>
+              <th class="px-8 py-2 border-r border-gray-400">First Name</th>
+              <th class="px-8 py-2 border-r border-gray-400">Last Name</th>
+              <th class="px-8 py-2 border-r border-gray-400">Email</th>
+              <th class="px-8 py-2 border-r border-gray-400">Phone Number</th>
+              <th class="px-8 py-2 border-r border-gray-400">Address</th>
+              <th class="px-8 py-2 border-r border-gray-400">Faculty</th>
+              <th class="px-8 py-2 border-r border-gray-400">Action</th>
+            </tr>
+          </thead>
+          <tbody>
+            {% for student in students %}
+            <tr class="hover:bg-gray-50">
+              <td class="border px-4 py-2">{{student.username}}</td>
+              <td class="border px-4 py-2">{{student.first_name}}</td>
+              <td class="border px-4 py-2">{{student.last_name}}</td>
+              <td class="border px-4 py-2">{{student.email}}</td>
+              <td class="border px-4 py-2">{{student.phone_number}}</td>
+              <td class="border px-4 py-2">{{student.address}}</td>
+              <td class="border px-4 py-2">{{student.faculty}}</td>
+              <td>
+                <button
+                  hx-post="/delete_account/{{student.username}}"
+                  hx-target="body"
+                >
+                  Delete
+                </button>
+              </td>
+            </tr>
+            {% endfor %}
+          </tbody>
+        </table>
+      </div>
     </div>
+  </div>
 </div>
