--- a/faculty/templates/teacher_list.html
+++ b/faculty/templates/teacher_list.html
@@ -5,7 +5,7 @@
 
 <div class="mx-auto max-w-screen-xl px-4 sm:px-6 lg:px-8 flex justify-center pt-5 mt-10">
     <div class="w-full lg:w-3/4 xl:w-2/3">
-        <table class="table-auto border border-gray-300 mx-auto">
+        <table class="table-auto border border-gray-300 mx-0">
             <thead>
                 <tr class="bg-gray-100">
                     <th class="px-4 py-2 border-r border-gray-400">Username</th>
