--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -9,7 +9,10 @@
     <script src="https://unpkg.com/@themesberg/flowbite@latest/dist/flowbite.bundle.js"></script>
 
 </head>
-
+<link
+  rel="stylesheet"
+  href="https://unicons.iconscout.com/release/v4.0.8/css/line.css"
+/>
 <body>
     <header aria-label="Site Header" class="bg-white">
         <div class="mx-auto max-w-screen-xl px-4 sm:px-6 lg:px-8 mt-3">
