--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -37,13 +37,15 @@
                             <div class="modal origin-top-right absolute right-0 mt-2 w-56 rounded-md shadow-lg bg-white ring-1 ring-black ring-opacity-5 hidden">
                                 <div class="py-1">
                                     <div class="flex items-center">
-                                        <span class="block px-4 py-2 text-sm text-gray-700">Signed in as:</span>
-                                        <button class="text-black close-modal text-2xl hover:text-teal-600 mx-0">&times;</button>
+                                      <span class="block px-4 py-2 text-sm font-medium text-gray-900">{{ user.username }}</span>
+                                      <button class="text-black close-modal text-2xl hover:text-teal-600 ml-auto">&times;</button>
                                     </div>
 
-                                    <span class="block px-4 py-2 text-sm font-medium text-gray-900">{{ user.username }}</span>
+                                    
                                     <div class="border-t border-gray-100"></div>
                                     <a href="" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 hover:text-gray-900" role="menuitem">Change Password</a>
+                                    <div class="border-t border-gray-100"></div>
+                                    <a href="{% url 'logout-page' %}" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 hover:text-teal-600" role="menuitem">Logout</a>
                                 </div>
                             </div>
                         </div>
@@ -97,6 +99,10 @@
                 modal.classList.add("hidden");
             }
         });
+        closeModal.addEventListener('click', function(){
+          modal.classList.add('hidden');
+          
+      });
     </script>
 
 </body>
